<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:padding="@dimen/widget_margin">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="190dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/logo"
        android:contentDescription="@string/logo" />
    <LinearLayout
        android:id="@+id/linearProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="horizontal"
        android:visibility="invisible">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtCalls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/minutes"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="16sp" />

            <ProgressBar

                android:id="@+id/progressBarCall"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_below="@+id/txtCalls"
                android:background="@drawable/circle_shape"
                android:indeterminate="false"
                android:max="100"
                android:progress="40"
                android:progressDrawable="@drawable/custom_progressbar" />

            <TextView
                android:id="@+id/txtProgressCall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtSms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/sms"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="16sp" />

            <ProgressBar
                android:id="@+id/progressBarText"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_below="@+id/txtSms"

                android:background="@drawable/circle_shape"
                android:indeterminate="false"
                android:max="100"
                android:progress="40"
                android:progressDrawable="@drawable/custom_progressbar" />

            <TextView
                android:id="@+id/txtProgressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/data"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="16sp" />

            <ProgressBar
                android:id="@+id/progressBarData"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_below="@+id/txtData"

                android:background="@drawable/circle_shape"
                android:indeterminate="false"
                android:max="100"
                android:progress="40"
                android:progressDrawable="@drawable/custom_progressbar" />

            <TextView
                android:id="@+id/txtProgressData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </RelativeLayout>


    </LinearLayout>
    <TextView
        android:id="@+id/errorView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/check_internet_connection"/>




</RelativeLayout>